--- a/styles.html
+++ b/styles.html
@@ -1,12 +1,20 @@
 styles.css
 
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Example page</title>
+		<meta charset="utf-8"/>
+	</head>
+	<body>
 <h1>CSS on jännä</h1>
 <p>Harjoittelen nyt css välinettä verkkosivun tekemiseen</p>
 <div>
 <ol>html
-  css
-  </ol>
+<ol>css
+</ol>
 </div>
 <ul>luut
-  iho
+<ul>iho
 </ul>
+</html>
