--- a/styles.html
+++ b/styles.html
@@ -1,20 +1,38 @@
-styles.css
 
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Example page</title>
-		<meta charset="utf-8"/>
+		<title>Harjoittelen</title>
+		<meta charset="utf-8" />
+		<link rel ="stylesheet" href="styles.css"/>
+	
+	<style>
+		.myDiv { border-style: dotted; border-width: 2px;
+			width:100px; height:100px;	
+			}
+	</style>
 	</head>
 	<body>
-<h1>CSS on jännä</h1>
-<p>Harjoittelen nyt css välinettä verkkosivun tekemiseen</p>
-<div>
-<ol>html
-<ol>css
-</ol>
-</div>
-<ul>luut
-<ul>iho
-</ul>
+	
+		<h1>CSS on hyödyllistä osata</h1>
+		<h2>Sillä saa monenlaisia muokkauksia</h2>
+		
+		<div class="myDiv"><p>Harjoittelen nyt css välinettä verkkosivun tekemiseen.</p>
+		<p>Mitä enemmän harjoittelee sen enemmän oppii.</p>
+		<p> Näin se tapahtuu:</p>
+		</div>
+		
+		<p> html tekeminen koostuu pääasiassa seuraavasta kahdesta osasta</p>
+		<ol type="A">
+		<li>html
+		<li>css
+		</ol>
+		
+		<p> tai toisien sanoen esimerkkinä</p>
+		<ul type="square">
+		<li>auto
+		<li>maali
+		</ul>
+		
+	</body>	
 </html>
