--- a/styles.html
+++ b/styles.html
@@ -15,22 +15,21 @@
 	<body>
 	
 		<h1>CSS on hyödyllistä osata</h1>
-		<h2>Sillä saa monenlaisia muokkauksia</h2>
 		
-		<div class="myDiv"><p>Harjoittelen nyt css välinettä verkkosivun tekemiseen.</p>
-		<p>Mitä enemmän harjoittelee sen enemmän oppii.</p>
-		<p> Näin se tapahtuu:</p>
+		<div class="myDiv">
+		<p>Verkkosivujen teossa on asioita, joita on hyvä muistaa.</p>
+		<p> </p>
 		</div>
 		
-		<p> html tekeminen koostuu pääasiassa seuraavasta kahdesta osasta</p>
+		<p> verkkosivujen tekeminen koostuu pääasiassa seuraavasta kahdesta osasta</p>
 		<ol type="A">
 		<li>html
 		<li>css
 		</ol>
 		
-		<p> tai toisien sanoen esimerkkinä</p>
+		<p> tai toisien sanoen esimerkkinä niiden toiminnasta</p>
 		<ul type="square">
-		<li>auto
+		<li>seinä
 		<li>maali
 		</ul>
 		
