--- a/styles.html
+++ b/styles.html
@@ -2,18 +2,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Harjoittelen</title>
+		<title>Assignment 3 B</title>
 		<meta charset="utf-8" />
 		<link rel ="stylesheet" href="styles.css"/>
-	
-	<style>
-		.myDiv { border-style: dotted; border-width: 2px;
-			width:100px; height:100px;	
-			}
-	</style>
+		
 	</head>
 	<body>
-	
+
+
 		<h1>CSS on hyödyllistä osata</h1>
 		
 		<div class="myDiv">
@@ -21,16 +17,16 @@
 		<p> </p>
 		</div>
 		
-		<p> verkkosivujen tekeminen koostuu pääasiassa seuraavasta kahdesta osasta</p>
-		<ol type="A">
+		<p> verkkosivujen tekeminen koostuu pääasiassa seuraavasta kahdesta välineestä</p>
+		<ol class="a">
 		<li>html
 		<li>css
 		</ol>
 		
-		<p> tai toisien sanoen esimerkkinä niiden toiminnasta</p>
-		<ul type="square">
-		<li>seinä
-		<li>maali
+		<p> tai toisien sanoen esimerkkinä niiden toiminnan eroista</p>
+		<ul class="b">
+		<li>auto
+		<li>maali ja sisusta
 		</ul>
 		
 	</body>	
