--- a/styles.html
+++ b/styles.html
@@ -1,9 +1,10 @@
 
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 	<head>
 		<title>Assignment 3 B</title>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8">
 		<link rel ="stylesheet" href="styles.css"/>
 		
 	</head>
