--- a/styles.html
+++ b/styles.html
@@ -5,8 +5,7 @@
 	<head>
 		<title>Assignment 3 B</title>
 		<meta charset="UTF-8">
-		<link rel ="stylesheet" href="styles.css"/>
-		
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
 
